# air-quality-analysis

./: README.md  analysis.ipynb  hello.py  location_map.html  main.py  pyproject.toml  requirements.txt  url.txt
asset/: air_quality_pm25.md  corelation_matrix_wd.md  correlation_matrix_musim.md
notebook/: analysis.ipynb
notebook/.ipynb_checkpoints/: analysis-checkpoint.ipynb
utils/: iqr.py
